fix overflow issue

--- a/wp-content/themes/olmarket/style.scss
+++ b/wp-content/themes/olmarket/style.scss
@@ -14,6 +14,10 @@ $black:black;
 $width:1024px;
 $gray:gray;
 
+html{
+  overflow-x: hidden;
+}
+
 body{
 	font-family: Verdana, Geneva, sans-serif;
 	background-image:url(images/extra.jpg);
@@ -25,6 +29,7 @@ body{
   background-color: #f1f0de;
   color:#656461;
   background-position: center top;
+  overflow-x: hidden;
 }
 
 a{
